--- a/src/components/Home/main.css
+++ b/src/components/Home/main.css
@@ -4,6 +4,8 @@
     .site-header-inner{
         align-items: baseline;
     }
-
+   .chat-logo{
+    width:160px;
+   }
   } 
 
